changed z-index to avail block. Based on testing this should fix the ie click problem

--- a/app/assets/stylesheets/venues/venues.scss
+++ b/app/assets/stylesheets/venues/venues.scss
@@ -384,7 +384,7 @@ div.divider {
 
 div.avail-block {
   position:absolute;
-  z-index: 100;
+  z-index: 1001;
   background: $pogo-orange;
   height: 12px;
   cursor: pointer;
